--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -561,6 +561,9 @@
     <!-- SearchScreen -->
     <string name="search_keyboard_hint">Press Done on the keyboard to search</string>
     <string name="search_placeholder">Search movies &amp; series</string>
+    <string name="search_start_title">Start Searching</string>
+    <string name="search_start_subtitle">Enter at least 2 characters</string>
+    <string name="search_start_subtitle_no_discover">Discover is disabled. Enter at least 2 characters</string>
 
     <!-- LibraryScreen -->
     <string name="library_syncing">Syncing Trakt library\u2026</string>
