--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -619,6 +619,12 @@
     <string name="next_episode_playing_via">Odtwarzanie przez %1$s za %2$ds</string>
     <string name="next_episode_play">Odtwórz</string>
     <string name="next_episode_unaired">Niewyemitowany</string>
+    <string name="skip_intro">Pomiń czołówkę</string>
+    <string name="skip_ending">Pomiń zakończenie</string>
+    <string name="skip_recap">Pomiń podsumowanie</string>
+    <string name="skip_generic">Pomiń</string>
+    <string name="display_mode_refresh">Odświeżanie</string>
+    <string name="display_mode_resolution">Rozdzielczość</string>
 
 
     <!-- SearchScreen -->
